--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.gms.google-services'
+    //id 'com.google.gms.google-services'
     id 'kotlin-parcelize'
 }
 
@@ -49,6 +49,10 @@ android {
     androidResources {
         generateLocaleConfig true
     }
+}
+
+if (!System.getenv().containsKey("CI")) {
+    apply plugin: 'com.google.gms.google-services'
 }
 
 dependencies {
