--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.gustavoas.noti"
         minSdk 21
         targetSdk 34
-        versionCode 90
-        versionName "2.0"
+        //versionCode 90
+        //versionName "2.0"
         versionCode 95
         versionName "2.2"
 
