--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ if (!System.getenv().containsKey("CI")) {
 }
 
 dependencies {
-    implementation platform('com.google.firebase:firebase-bom:33.13.0')
+//    implementation platform('com.google.firebase:firebase-bom:33.13.0')
 
     implementation 'androidx.core:core-ktx:1.16.0'
     implementation 'androidx.appcompat:appcompat:1.7.0'
@@ -69,5 +69,5 @@ dependencies {
     implementation 'com.github.kizitonwose.colorpreference:support:1.1.0'
     implementation 'com.github.kizitonwose.colorpreference:core:1.1.0'
     implementation 'com.github.eltos:simpledialogfragments:v3.7'
-    implementation 'com.google.firebase:firebase-storage'
+ //   implementation 'com.google.firebase:firebase-storage'
 }
